# sigconverter.io

./: Dockerfile  README.md
backend/: pyproject.toml  setup-sigma-plugins.sh
backend/1.0.3/: pyproject.toml
backend/1.0.4/: pyproject.toml
backend/1.0.5/: pyproject.toml
backend/1.0.6/: pyproject.toml
backend/2.0.0/: pyproject.toml
backend/2.0.1/: pyproject.toml
backend/2.0.2/: pyproject.toml
backend/3.0.0/: pyproject.toml
backend/3.0.1/: pyproject.toml
backend/3.0.2/: pyproject.toml
